# cookiecutter-python-cli

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  README.rst  pyproject.toml  run-tests.sh
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_package }}/: __main__.py  settings.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: settings.py
